Tell ant to use mome memory